--- a/res/css/adminStyle.css
+++ b/res/css/adminStyle.css
@@ -832,8 +832,8 @@ input[type="file"] {
 
 /* Hover effect */
 #search-results li:hover {
-    background-color: #073066d8; /* Change color on hover */
-    color: #e9e9e9; /* Change text color on hover */
+    background-color: #eee; /* Change color on hover */
+    color: #000000; /* Change text color on hover */
 }
 
 #search-results ul li {
