--- a/res/css/dances.css
+++ b/res/css/dances.css
@@ -816,6 +816,13 @@ strong {
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
+  
+  .video-container {
+	position: relative;
+	width: 100%;
+	max-width: 600px; /* Adjust as needed */
+	margin: auto;
+}
 
 @media screen and (min-width: 1681px) {
 	.btn-radius {
