--- a/res/css/adminStyle.css
+++ b/res/css/adminStyle.css
@@ -607,6 +607,15 @@ input[type="file"] {
 	flex-wrap: wrap;
 }
 
+.edit-delete-button-container {
+	display: flex;
+	gap: 10px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
 .popup {
 	background: rgba(0, 0, 0, 0.6);
 	width: 100%;
