--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -2080,3 +2080,28 @@ a-plane {
         height: 80px;
     }
 }
+
+/* Overlay style */
+ .overlay {
+	 display: none;
+	 position: fixed;
+	 top: 0;
+	 left: 0;
+	 width: 100%;
+	 height: 100%;
+	 background-color: rgba(0, 0, 0, 0.5);
+	 justify-content: center;
+	 align-items: center;
+	 z-index: 1000;
+ }
+
+.overlay-message {
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	text-align: center;
+	font-size: 18px;
+	color: #333;
+	max-width: 400px;
+	margin: auto;
+}
