--- a/res/css/adminStyle.css
+++ b/res/css/adminStyle.css
@@ -1189,7 +1189,7 @@ td {
     transform: translateX(-50%);
 }
 
-@media only screen and (max-width: 1366px) {
+@media only screen and (min-width: 1366px) and (max-width: 1920px) {
 
 	html,
 	body {
@@ -1226,7 +1226,7 @@ td {
 	}
 
 	.left-container {
-		margin-top: 35px;
+		margin-top: 55px;
 		margin-right: 10px;
 	}
 
@@ -1238,5 +1238,6 @@ td {
 		padding: 10px 20px;
 		font-size: 1.2em;
 	}
+
 
 }
