--- a/res/css/adminStyle.css
+++ b/res/css/adminStyle.css
@@ -1239,5 +1239,28 @@ td {
 		font-size: 1.2em;
 	}
 
+	header .greetings {
+		display: flex;
+		align-items: center;
+		gap: 10px;
+	}
+	
+	header .logo,
+	header .greetings {
+		flex-shrink: 1;
+	
+	}
+	
+	header .greetings img {
+		height: 30px;
+		border: 1px solid white;
+		border-radius: 5px;
+	}
+	
+	header .greeting {
+		font-size: 2.1vmin;
+		margin-left: auto;
+		padding-right: 30px;
+	}
 
 }
